# ros2-workshop

./: .gitmodules  README.md
basics/src/cliser/: CMakeLists.txt  package.xml
basics/src/cliser/cliser/nodes/: minimal_client.py
basics/src/cliser/src/: minimal_service.cc
basics/src/pubsub/: CMakeLists.txt  package.xml
basics/src/pubsub/launch/: pubsub.launch.py
basics/src/pubsub/msg/: person.msg
basics/src/pubsub/pubsub/nodes/: minimal_subscriber.py
basics/src/pubsub/src/: minimal_publisher.cc
